/*
 * $Id: ChangeLog,v 1.1012 2003/05/09 04:20:54 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-05-09 11:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed SearnRep() to reset <bDontInstanciate> and <lastchar> when NEW Group is encountered.

2003-05-08 21:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
    * Corrected optimization of HB_P_LOCALNEARSETSTR to consider HB_P_MACROTEXT.
    * Reinstated 1 optimization of HB_P_LOCALNEARSETSTR which was disabled unintentionally.

2003-05-08 19:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbextern.ch
    + Added some missing symbols.

  * source/vm/hvm.c
    + Added HB_EXPORT PSYMBOLS hb_vmLastModule( void )
      /* Needed by runner.c to reset Module Sybols list after unloading a module. */
    * Minor formatting.

  * source/vm/runner.c
    + Added member PSYMBOLS pPrevLastModule to structure HRB_BODY and logic to reset
      the global modules sybols list after reloading a module. This fixed a GPF.
    ! Commented out freeing of module symbols because it corrupts the Dynamic-Symbols-Table,
      which was causing GPFs.
    * Some Formatting.

  * tests/pp.prg
  * tests/pp_harb.ch
    * Moved all [x]Harbour specific code from pp.prg to pp_harb.ch.

2003-05-08 07:45 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  *source/rdd/dbfntx/dbfntx1.c
    ! Added fixes to Ordkeycount() Borrow from harbour
  * contrib/rdd_ads/ads1.c
    ! Bug fixed in adsOrderListClear() - the current order is set to 0 now
     borrow from harbour

2003-05-08 00:26 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * makefile.bc
    makefile.vc
    utils/hbmake/Makefile
     + Tmake.prg added to dependencies
   * utils/hbmake/hbmake.prg
    ! several changes
      New screen on edit mode for user be more confortable